# MyAI

./: CMakeLists.txt  README.md
examples/basicLearning/: main.cpp
examples/dots/: main.cpp
include/MyAI/: NeuralNetwork.h  functions.h
src/: NeuralNetwork.cpp  functions.cpp
tests/: CMakeLists.txt  test.cpp
